GOWL-02: Create AuthApi and updated UsersBOApi.